Fixed bugs in IPC